kustomize/base/flaskapp/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaskapp-svc
spec:
  selector:
    app: flaskapp
  type: NodePort
  ports:
    - port: 80          # Port exposed by the Service
      targetPort: 5002  # Port inside the container
